[gd_scene load_steps=13 format=2]

[ext_resource path="res://Terrain/WaterHole.gd" type="Script" id=1]
[ext_resource path="res://Textures/new_opensimplexnoise.tres" type="OpenSimplexNoise" id=2]
[ext_resource path="res://Textures/pinkerflesh.tres" type="Material" id=3]

[sub_resource type="NoiseTexture" id=1]
noise = ExtResource( 2 )

[sub_resource type="OpenSimplexNoise" id=8]
seed = 1
period = 18.1
persistence = 1.0
lacunarity = 1.3

[sub_resource type="NoiseTexture" id=3]
noise = SubResource( 8 )

[sub_resource type="OpenSimplexNoise" id=9]
seed = 4
octaves = 2
period = 18.1
persistence = 1.0
lacunarity = 1.3

[sub_resource type="NoiseTexture" id=5]
noise = SubResource( 9 )

[sub_resource type="AnimatedTexture" id=10]
flags = 7
frames = 3
fps = 6.0
frame_0/texture = SubResource( 1 )
frame_1/texture = SubResource( 3 )
frame_1/delay_sec = 0.0
frame_2/texture = SubResource( 5 )
frame_2/delay_sec = 0.0

[sub_resource type="SpatialMaterial" id=7]
flags_transparent = true
albedo_color = Color( 0.313726, 0.168627, 0.458824, 0.341176 )
albedo_texture = SubResource( 10 )

[sub_resource type="PlaneMesh" id=11]
material = SubResource( 7 )
size = Vector2( 3, 3 )

[sub_resource type="CylinderShape" id=12]
height = 1.14111
radius = 1.21851

[node name="ovalpool" type="CSGSphere"]
transform = Transform( 1, 0, 0, 0, 0.4, 0, 0, 0, 0.8, 0, 0, 0 )
operation = 2
use_collision = true
invert_faces = true
radius = 1.4
material = ExtResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.706501, 0 )
mesh = SubResource( 11 )

[node name="WaterHole" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.606148, 0 )
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="WaterHole"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.638084, 0 )
shape = SubResource( 12 )

[node name="WaterEffectTimer" type="Timer" parent="WaterHole"]
wait_time = 0.05
autostart = true

[connection signal="body_entered" from="WaterHole" to="WaterHole" method="_on_WaterHole_body_entered"]
[connection signal="body_exited" from="WaterHole" to="WaterHole" method="_on_WaterHole_body_exited"]
[connection signal="timeout" from="WaterHole/WaterEffectTimer" to="WaterHole" method="_on_WaterEffectTimer_timeout"]
